Remove optional JELLYFIN_PublishedServerUrl from Jellyfin compose file and add Netbird compose configuration

--- a/Jellyfin/compose.yml
+++ b/Jellyfin/compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: jellyfin
     environment:
       - TZ=Africa/Kampala # Set your timezone
-      - JELLYFIN_PublishedServerUrl=https://your-address.example.com #optional
+      #- JELLYFIN_PublishedServerUrl=https://your-address.example.com #optional
     volumes:
       - ./config:/config
       - ./cache:/cache
